- fix for firefox   - css changes     - add margins to articles in grid so they do not overlap

--- a/styles/main.css
+++ b/styles/main.css
@@ -273,4 +273,5 @@ article-card[unresolved] {
 
 .project-card:first-of-type {
   width: 100%;
+  margin: auto;
 }
