--- a/styles/screen.css
+++ b/styles/screen.css
@@ -58,6 +58,11 @@
 
   .project-card {
     width: 50%;
+    margin-top: 2em;
+  }
+
+  .project-card:first-of-type {
+    margin-top: auto;
   }
 
   .brief {
